fix(CommonsBook): Fix grid overflow, add negative space

--- a/client/src/screens/commons/Book/Book.module.css
+++ b/client/src/screens/commons/Book/Book.module.css
@@ -1,8 +1,9 @@
 .grid {
   display: grid;
-  grid-template-columns: 25% 75%;
+  grid-template-columns: 1fr 3fr;
   grid-template-areas: 'meta info';
   column-gap: 1em;
+  padding: 0.25em;
 }
 
 .book_meta {
